# house_price

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
files/data_final/: X_train.csv  X_train_scaled.csv  X_val.csv  X_val_scaled.csv  features.txt  y_train.csv  y_val.csv
files/fitted_obj/: gb_regressor  nn_regressor.pt  preprocessor.joblib
src/: __init__.py  training.py
src/features/: __init__.py  features.py
src/models/: __init__.py  gradient_boosting.py  neural_network.py
src/preprocessing/: __init__.py  custom_preprocessor.py
train/: train_boosting.py  train_nn.py  train_preprocessing.py
